<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="16dp"
	android:background="@color/background">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<EditText
			android:id="@+id/edtTitulo"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/titulo"
			android:inputType="textPersonName" />

		<EditText
			android:id="@+id/edtDiretor"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/diretor"
			android:inputType="textPersonName"
			android:layout_marginTop="8dp" />

		<EditText
			android:id="@+id/edtAno"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/ano"
			android:inputType="number"
			android:layout_marginTop="8dp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/nota"
			android:layout_marginTop="8dp" />

		<EditText
			android:id="@+id/edtNota"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="1 a 5"
			android:inputType="number"
			android:maxLength="1" />

		<Spinner
			android:id="@+id/spinnerGenero"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp" />

		<CheckBox
			android:id="@+id/checkCinema"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/viu_no_cinema"
			android:layout_marginTop="8dp" />

		<Button
			android:id="@+id/btnSalvar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/salvar"
			android:layout_marginTop="16dp" />

	</LinearLayout>
</ScrollView>
